RESOLVED FIXED 248827
REGRESSION (253865@main): Crashes under RenderLayerCompositor::updateScrollingNodeForViewportConstrainedRole
https://bugs.webkit.org/show_bug.cgi?id=248827
Summary REGRESSION (253865@main): Crashes under RenderLayerCompositor::updateScrollin...
Simon Fraser (smfr)
Reported 2022-12-06 10:28:12 PST
253865@main introduced a cluster of crashes where, under RenderLayerCompositor::updateScrollingNodeForViewportConstrainedRole(), a fixed or sticky layer would have a null viewportAnchorLayer().
Attachments
Simon Fraser (smfr)
Comment 1 2022-12-06 10:28:25 PST
Simon Fraser (smfr)
Comment 2 2022-12-06 10:39:45 PST
EWS
Comment 3 2022-12-06 18:31:11 PST
Committed 257455@main (df0e5116081b): <https://commits.webkit.org/257455@main> Reviewed commits have been landed. Closing PR #7213 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.