Cherry-pick 257455@main (df0e5116081b). https://bugs.webkit.org/show_bug.cgi?id=248827

REGRESSION (253865@main): Crashes under RenderLayerCompositor::updateScrollingNodeForViewportConstrainedRole
    https://bugs.webkit.org/show_bug.cgi?id=248827
    rdar://102619100

    Reviewed by Alan Baradlay.

    In 253865@main I introduced `m_viewportAnchorLayer`, which is used by the scrolling tree
    to move fixed and sticky position layers. However, this revealed bugs in the compositing
    dirty state management in the RenderLayer tree, where some types of tree mutations would
    fail to trigger the "configuration" compositing update on a composited layer which is
    responsible for the addition/removal of the `m_viewportAnchorLayer`.

    From the collection of crash reports, I diagnosed two scenarios:

    On google.com, when selecting results in the map view (rdar://102713246), a fixed layer
    gained/lost a transformed ancestor. Transforms act as containing block for fixed, so
    this changes whether the fixed layer is viewport-constrained. Fixed by having
    `RenderLayer::setBehavesAsFixed()` call `setNeedsCompositingConfigurationUpdate()` on
    fixed layers. Normally repaints trigger `setNeedsCompositingConfigurationUpdate()`; I
    was not able to creation a reduction for this (the google page has nested fixed and
    `visibility:hidden`, which may contribute).

    The second scenario involved a sticky position layer which gains/loses an
    async-scrollable ancestor. Fixed by having
    `RenderLayerScrollableArea::computeHasCompositedScrollableOverflow()` call
    `setDescendantsNeedUpdateBackingAndHierarchyTraversal()` on the stacking context
    ancestor. Tested by sticky-gain-composited-scrolling-ancestor.html.

    Also defensively early return in `computeFixedViewportConstraints()` and
    `computeStickyViewportConstraints()` if the anchor layer is null.

    * LayoutTests/scrollingcoordinator/scrolling-tree/sticky-gain-composited-scrolling-ancestor-expected.txt: Added.
    * LayoutTests/scrollingcoordinator/scrolling-tree/sticky-gain-composited-scrolling-ancestor.html: Added.
    * Source/WebCore/rendering/RenderLayer.cpp:
    (WebCore::RenderLayer::recursiveUpdateLayerPositions):
    (WebCore::RenderLayer::setBehavesAsFixed):
    * Source/WebCore/rendering/RenderLayer.h:
    * Source/WebCore/rendering/RenderLayerCompositor.cpp:
    (WebCore::RenderLayerCompositor::computeFixedViewportConstraints const):
    (WebCore::RenderLayerCompositor::computeStickyViewportConstraints const):
    * Source/WebCore/rendering/RenderLayerScrollableArea.cpp:
    (WebCore::RenderLayerScrollableArea::computeHasCompositedScrollableOverflow):

    Canonical link: https://commits.webkit.org/257455@main